Add basic interactivity

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <div class="container">
         <div id="dom-results">
-            <div>PLACEHOLDER DATA</div>
+            <!-- <div>PLACEHOLDER DATA</div> -->
         </div>
         
         <!-- Dom will be used to place human and computer's choice-->
