Add combat scene

--- a/index.html
+++ b/index.html
@@ -10,21 +10,28 @@
 <body>
 
     <div class="container">
+        <div class="scores">
+
+        </div>
         <div id="dom-results">
             <!-- <div>PLACEHOLDER DATA</div> -->
         </div>
         
         <!-- Dom will be used to place human and computer's choice-->
         <div class="combat">
-            <div>random1</div>
-            <div id="versus">VS</div>
-            <div>randio2</div>
+            <span id="human-fighter"></span>
+            <!-- flaticon.com/free-icons/vs created by tulpahn - Flaticon -->
+             <!-- A link to the icon source can be seen in the credits section 
+                wich is located in the credits page 
+             -->
+            <div id="versus-div"> <img id="versus-img" src="fight-resized.png" alt="Versus"></div>
+            <span id="computer-fighter"></span>
         </div>
         
         <div class="button-container">
-            <button id="rock">&#x1FAA8</button>
-            <button id="paper">&#x1F4C4</button>
-            <button id="scissors">&#x2702</button>
+            <button id="rock">&#x1FAA8;</button>
+            <button id="paper">&#x1F4C4;</button>
+            <button id="scissors">&#x2702;</button>
         </div>
     </div>
 </body>
