Add better background color, remove debug code, add score styles and more

--- a/index.html
+++ b/index.html
@@ -11,10 +11,17 @@
 
     <div class="container">
         <div class="scores">
-
+            <div class="human">
+                <div class="human-score">0</div>
+                <div class="human-player">You</div>
+            </div>
+            <div class="computer">
+                <div class="computer-score">0</div>
+                <div class="computer-player">Opponent</div>
+            </div>
         </div>
         <div id="dom-results">
-            <!-- <div>PLACEHOLDER DATA</div> -->
+            <p class="results-text"></p>
         </div>
         
         <!-- Dom will be used to place human and computer's choice-->
