--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
         </div>
         
         <div class="button-container">
-            <button id="rock">&#x1FAA8;</button>
-            <button id="paper">&#x1F4C4;</button>
-            <button id="scissors">&#x2702;</button>
+            <button id="rock" class="choice">&#x1FAA8;</button>
+            <button id="paper" class="choice">&#x1F4C4;</button>
+            <button id="scissors" class="choice">&#x2702;</button>
         </div>
     </div>
 </body>
